--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 	"name": "Timeline",
 	"version": "0.5",
 	"minAppVersion": "0.9.12",
-	"description": "Use to build great timelines",
+	"description": "Used to build great timelines",
 	"author": "George Butco",
-	"authorUrl": "https://obsidian.md/about",
+	"authorUrl": "",
 	"isDesktopOnly": false
 }
