--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ package-lock.json
 
 # obsidian
 data.json
+
+# release
+
+main.ts
+package.json
+rollup.config.js
+styles.sass
+tsconfig.json
+versions.json
