--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^14.14.37",
     "obsidian": "^0.15.4",
     "rollup": "^2.32.1",
+    "rollup-plugin-scss": "^3.0.0",
+    "sass": "^1.53.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   }
